--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script>
-        var typed = new Typed(".auto-type"){
-            string: ["PAUL NARA", "Informatics", "Indonesia"],
+     <script>
+        var typed = new Typed(".auto-type", {
+            strings: ["Paul Nara", "Informatics", "Indonesia"],
             typeSpeed: 150,
             backSpeed: 150,
             loop: true
         })
-
     </script>
 </body>
 </html>
